[package]
name = "captcha"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", optional = true }
fontdue = "0.9.3"
image = { version = "0.25.8", default-features = false, features = ["png"] }
imageproc = "0.25.0"
rand = { version = "0.9.2", default-features = false, features = [
  "thread_rng",
] }
raqote = { version = "0.8.5", default-features = false }

[features]
default = ["base64"]
base64 = ["dep:base64"]
